Add master node tolaretion to extender

--- a/deploy/extender.yaml
+++ b/deploy/extender.yaml
@@ -20,5 +20,7 @@ spec:
           labelSelector:
             matchLabels:
               component: kube-scheduler
-
-
+  tolerations:
+    - key: node-role.kubernetes.io/master
+      operator: "Exists"
+      effect: NoSchedule
